package com.thewhite.blank.api.exercise.dto;

import com.thewhite.blank.api.announcement.dto.AnnouncementDto;
import com.thewhite.blank.model.Announcement;
import com.thewhite.blank.model.ExerciseStatus;
import com.thewhite.blank.model.User;
import lombok.*;

import java.time.LocalDateTime;
import java.util.UUID;


/**
 * Generated by Thanos
 */
@Getter
@Setter
@Builder
@AllArgsConstructor
@NoArgsConstructor
public class ExerciseDto {

    UUID id;

    String title;

    String description;

    AnnouncementDto announcement;

    User teacher;

    User student;

    LocalDateTime date;

    ExerciseStatus status;

}